<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Ruslan Khvastunov
  ~ r.khvastunov@gmail.com
  ~ Copyright (c) 2022
  ~ All rights reserved.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="InefficientWeight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        android:elevation="@dimen/m_default_elevation"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/item_bmi_index_padding_vertical">

        <TextView
            style="@style/ItemTitleTextView"
            android:layout_weight="1.2"
            android:text="@string/title_date" />

        <TextView
            style="@style/ItemTitleTextView"
            android:layout_weight="1"
            android:text="@string/title_weight" />

        <TextView
            style="@style/ItemTitleTextView"
            android:layout_weight="1"
            android:text="@string/title_index" />

        <TextView
            style="@style/ItemTitleTextView"
            android:layout_weight="1.8"
            android:text="@string/title_status" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bmi_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        android:layout_marginTop="@dimen/item_bmi_layout_margin"
        tools:listitem="@layout/item_bmi_history" />
</LinearLayout>