<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Ruslan Khvastunov
  ~ r.khvastunov@gmail.com
  ~ Copyright (c) 2022
  ~ All rights reserved.
  ~
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".history.BmiHistoryFragment">

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/error_no_data"
        android:textSize="@dimen/error_no_data_text_size" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout style="@style/MyTopAppBarComponent.FrameLayout">

                <TextView
                    style="@style/MyTopAppBarComponent.TextView.Title"
                    android:text="@string/title_history" />

                <ImageButton
                    android:id="@+id/ib_calculate_new_bmi"
                    style="@style/MyTopAppBarComponent.Button.Action"
                    android:contentDescription="@string/action_calculate_bmi"
                    android:src="@drawable/ic_calculate" />
            </FrameLayout>


            <LinearLayout
                android:id="@+id/cl_bmi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">


                <androidx.cardview.widget.CardView
                    android:id="@+id/_statistic"
                    style="@style/CardViewDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m_default_layout_margin">

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/bmi_bar_chart_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/m_default_layout_margin"
                        android:minHeight="@dimen/bar_chart_min_height" />
                </androidx.cardview.widget.CardView>


                <include
                    android:id="@+id/included"
                    layout="@layout/layout_bmi_history_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m_default_layout_margin" />


                <Button
                    android:id="@+id/btn_clear_history"
                    style="@style/ButtonDef.Primary"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="@dimen/m_default_layout_margin"
                    android:layout_marginBottom="@dimen/m_default_fab_margin"
                    android:text="@string/action_clear_history"
                    app:icon="@drawable/ic__delete" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>