<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Ruslan Khvastunov
  ~ r.khvastunov@gmail.com
  ~ Copyright (c) 2022
  ~ All rights reserved.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:colorBackground"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".calculation.BmiCalculationFragment"
    tools:ignore="ContentDescription">

    <FrameLayout style="@style/MyTopAppBarComponent.FrameLayout">

        <ImageButton
            android:id="@+id/ib_calculator_back"
            style="@style/MyTopAppBarComponent.Button.Back"
            android:backgroundTint="?attr/colorSecondary"
            android:src="@drawable/ic_close" />

        <TextView
            style="@style/MyTopAppBarComponent.TextView.Title"
            android:text="@string/title_bmi_calculator"
            android:textColor="?attr/colorSecondary" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/m_default_layout_margin"
        android:layout_marginTop="@dimen/subtitle_first_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/_height"
            style="@style/SubTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_height_sm" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/m_default_layout_margin"
        android:layout_marginTop="@dimen/subtitle_second_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/_weight"
            style="@style/SubTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_weight_kg" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/result_card"
        style="@style/CardViewDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/m_default_layout_margin"
        android:layout_marginVertical="@dimen/card_margin_top"
        android:visibility="invisible"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/m_default_layout_margin">

            <TextView
                android:id="@+id/_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_result"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/card_title_text_size"
                app:fontFamily="@font/roboto_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_bmi_index"
                style="@style/CardSubTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_default_layout_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/_result"
                tools:text="BMI Index: 23.43" />

            <TextView
                android:id="@+id/tv_bmi_status"
                style="@style/CardSubTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bmi_index"
                tools:text="Status: Normal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/m_default_layout_margin"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/action_calculate"
        android:textSize="@dimen/card_subtitle_text_size"
        app:fontFamily="@font/roboto_bold" />
</LinearLayout>